template/style/main.css
:root {
    --color-gray: #393939;
    --color-grey: var(--color-gray);
    --color-lightgray: #aaa;
    --color-lightgrey: var(--color-lightgray);
    --color-blue: #4a90e2;
    --color-pink: #e86e64;
    --color-yellow: #ffbf00;
}

a {
    color: black;
    text-decoration: none;
}

a:visited {
    color: transparent;
}

body {
    margin: 0;
    font-family: 'Poppins', sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex-grow: 1;
    /*debug*/
    perspective: 300px;
    transform-style: preserve-3d;
}

#white_space {
    height: 100vh;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    background: white;
}

#words_box {
    text-align: center;
    margin-bottom: 120px;
    margin-top: 100px;
}

#words_box>span {
    color: var(--color-lightgray);
    font-size: 2.5vw;
}

#main_name {
    color: var(--color-gray);
    font-weight: 900;
    font-size: 10vw;
    display: flex;
    flex-direction: column;
    user-select: none;
    margin-bottom: 20px;
}

#main_name>span {
    line-height: 0.8;
}

#mouse {
    width: 20px;
    height: 40px;
    border: 2px solid var(--color-gray);
    border-radius: 10px;
    box-sizing: border-box;
    position: absolute;
    bottom: 40px;
    left: calc(50% - 10px);
}

#mouse::after {
    content: "";
    display: block;
    width: 6px;
    height: 6px;
    border-radius: 3px;
    background: var(--color-gray);
    position: relative;
    top: 5px;
    left: calc(50% - 2.5px);
    animation: 1.5s mouse_scroll infinite linear;
}

@keyframes mouse_scroll {
    0% {
        opacity: 0.1;
    }
    50% {
        opacity: 1;
    }
    100% {
        top: 25px;
        opacity: 0.3;
    }
}

.grid_gallery {
    display: grid;
    width: 100%;
    height: 50vw;
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: repeat(4, 1fr);
}

#p_background_image {
    background: url(https://www.nastol.com.ua/pic/201805/1920x1080/nastol.com.ua-286779.jpg);
}

#projects_section {
    background: white;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 4vw;
}

